# StormWatch

./: Cargo.toml  README.md  dockerfile
backend/: dockerfile
backend/src/host/: Cargo.toml
backend/src/host/src/: main.rs
backend/src/weather/: Cargo.toml
backend/src/weather/src/: lib.rs
frontend/: .eslintcache  package-lock.json  package.json
frontend/src/: App.css  App.tsx
src/: main.rs
src/host/src/: main.rs
src/logic/: Cargo.toml
src/logic/src/: lib.rs
src/protocol/: Cargo.toml
src/protocol/src/: lib.rs
src/weather/: Cargo.toml
src/weather/src/: lib.rs
