[package]
name = "weatherstation"
version = "0.1.0"
authors = ["zachChilders <zach@childers.dev>"]
edition = "2018"

[lib]
name = "weatherstation"
path = "src/lib.rs"
crate-type = ["rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.3"
reqwest = {version= "0.10.10", features = ["blocking"]}

serde = {version="1.0.118", features = ["derive"]}
serde_json = "1.0"

weather_protocol = { path = "../protocol"}