[package]
name = "host"
version = "0.1.0"
authors = ["zachChilders <zach@childers.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2.5"
weather = {path = "../weather"}
weather_protocol = {path = "../protocol"}